# nifty

./: CMakeLists.txt  EXAMPLE_CONFIGURATIONS.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  SETUPTOOLS_MIGRATION_STRATEGY.md  TECHNICAL_SPECIFICATIONS.md  WHEEL_VARIANTS_STRATEGY.md  environment.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_unix.sh  build_win.bat  environment.yaml
conda-recipe/: meta.yaml
include/nifty/: nifty_config.hxx
include/nifty/array/: arithmetic_array.hxx
include/nifty/distributed/: graph_extraction.hxx
include/nifty/graph/: label_propagation.hxx  undirected_list_graph.hxx
include/nifty/graph/agglo/cluster_policies/: gasp_cluster_policy.hxx
include/nifty/graph/opt/lifted_multicut/: pixel_wise.hxx  pixel_wise_q.hxx
include/nifty/graph/rag/: get_lifted_edges_from_rag_and_offsets.hxx  grid_rag.hxx
include/nifty/graph/rag/feature_accumulation/: grid_rag_accumulate_stacked.hxx
include/nifty/hdf5/: hdf5_array.hxx
include/nifty/python/graph/agglo/: export_agglomerative_clustering.hxx
include/nifty/tools/: block_access.hxx  label_multiset.hxx
include/nifty/transformation/: coordinate_transformation.hxx
include/nifty/ufd/: boost_ufd.hxx
include/nifty/xtensor/: xtensor.hxx
nifty/: __init__.py
nifty/segmentation/: __init__.py
scripts/: manage_submodules.py
src/python/: CMakeLists.txt
src/python/lib/: CMakeLists.txt
src/python/lib/carving/: CMakeLists.txt
src/python/lib/distributed/: CMakeLists.txt
src/python/lib/graph/: CMakeLists.txt
src/python/lib/graph/long_range_adjacency/: CMakeLists.txt
src/python/lib/graph/opt/: CMakeLists.txt
src/python/lib/graph/opt/lifted_multicut/: CMakeLists.txt  pixel_wise_lifted_multicut.cxx
src/python/lib/graph/opt/mincut/: CMakeLists.txt
src/python/lib/graph/opt/minstcut/: CMakeLists.txt
src/python/lib/graph/opt/multicut/: CMakeLists.txt
src/python/lib/graph/rag/: CMakeLists.txt
src/python/lib/hdf5/: CMakeLists.txt
src/python/lib/skeletons/: CMakeLists.txt
src/python/lib/tools/: CMakeLists.txt
src/python/lib/transformation/: CMakeLists.txt
src/python/lib/z5/: CMakeLists.txt
src/python/module/nifty.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/test/test_graph/test_rag/: simple_rag_test.cxx
