[metadata]
name = nifty
author = Thorsten Beier
author_email = derthorstenbeier@gmail.com
description = Graph-based segmentation algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DerThorsten/nifty
project_urls =
    Documentation = https://nifty.readthedocs.io/
    Repository = https://github.com/DerThorsten/nifty.git
    Issues = https://github.com/DerThorsten/nifty/issues
license_files = LICENSE

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
package_dir =
    = src/python/module
packages = find:

[options.packages.find]
where = src/python/module

[options.package_data]
nifty = *.so, *.pyd, *.dll, *.dylib
* = *.pyx, *.pxd

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0

# Development tools configuration

[tool:pytest]
testpaths = src/python/test
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers
    --disable-warnings
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    requires_solver: marks tests that require external solvers

[coverage:run]
source = nifty
omit = 
    */test/*
    */tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    .eggs

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = nifty
known_third_party = numpy,scipy,scikit-image,h5py,z5py

[black]
line-length = 88
target-version = py38
include = \.pyi?$
extend-exclude = \.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist